--- a/ecommerce-api/microservices/productService/.env
+++ b/ecommerce-api/microservices/productService/.env
@@ -1,1 +1,4 @@
 
+PRODUCT_SERVICE_MONGO_URI=mongodb+srv://mitch1:portfoliodbpassword@andy.kf1hg09.mongodb.net/product_serviceDb
+
+PRODUCT_SERVICE_PORT=3001
