--- a/ecommerce-api/microservices/apiGateway/nginx.config
+++ b/ecommerce-api/microservices/apiGateway/nginx.config
@@ -1,1 +1,32 @@
 
+events { }
+
+http {
+    upstream user_service {
+        server user-service:3000;
+    }
+
+    upstream product_service {
+        server product-service:4002;
+    }
+
+    upstream order_service {
+        server order-service:4003;
+    }
+
+    server {
+        listen 80;
+
+        location /users/ {
+            proxy_pass http://user_service/;
+        }
+
+        location /products/ {
+            proxy_pass http://product_service/;
+        }
+
+        location /orders/ {
+            proxy_pass http://order_service/;
+        }
+    }
+}
