--- a/ecommerce-api/docker-compose.yml
+++ b/ecommerce-api/docker-compose.yml
@@ -3,11 +3,11 @@ services:
   user-service:
     build: ./user-service
     ports:
-      - "4001:4001"
+      - "3000:3000"
     environment:
       - MONGO_URI=mongodb://mongo-users:27017/users
       - JWT_SECRET=supersecret
-      - PORT=4001
+      - PORT=3000
     depends_on:
       - mongo-users
 
@@ -44,7 +44,7 @@ services:
   api-gateway:
     image: nginx:latest
     volumes:
-      - ./api-gateway/nginx.conf:/etc/nginx/nginx.conf
+      - ./apiGateway/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "80:80"
     depends_on:
