added mongo uri, redis url

--- a/ecommerce-api/microservices/productService/.env
+++ b/ecommerce-api/microservices/productService/.env
@@ -2,3 +2,8 @@
 PRODUCT_SERVICE_MONGO_URI=mongodb+srv://mitch1:portfoliodbpassword@andy.kf1hg09.mongodb.net/product_serviceDb
 
 PRODUCT_SERVICE_PORT=3001
+
+
+PORT=4002
+MONGO_URI=mongodb://mongo-products:27017/products
+REDIS_URL=redis://redis:6379
