--- a/ecommerce-api/docker-compose.yml
+++ b/ecommerce-api/docker-compose.yml
@@ -1,56 +1,95 @@
 version: '3.8'
 services:
   user-service:
-    build: ./user-service
+    build: ./userService
     ports:
       - "3000:3000"
     environment:
-      - MONGO_URI=mongodb://mongo-users:27017/users
+      - MONGO_URI=mongodb+srv://mitch1:portfoliodbpassword@andy.kf1hg09.mongodb.net/user_serviceDb
       - JWT_SECRET=supersecret
       - PORT=3000
     depends_on:
       - mongo-users
+    restart: always
 
   mongo-users:
     image: mongo
     ports:
       - "27017:27017"
+    restart: always
 
-  product-service:
-    build: ./product-service
+# services:
+#   user-service:
+#     build: ./userService
+#     ports:
+#       - "3000:3000"
+#     environment:
+#       - MONGO_URI=mongodb+srv://mitch1:portfoliodbpassword@andy.kf1hg09.mongodb.net/user_serviceDb
+#       - JWT_SECRET=supersecret
+#       - PORT=3000
+#     depends_on:
+#       - mongo-users
+
+#   mongo-users:
+#     image: mongo
+#     ports:
+#       - "3000:3000"
+
+  # productService:
+  #   build: ./productService
+  #   ports:
+  #     - "3001:3001"
+  #   environment:
+  #     - MONGO_URI=mongodb+srv://mitch1:portfoliodbpassword@andy.kf1hg09.mongodb.net/product_serviceDb
+  #     - REDIS_URL=redis://redis:6379
+  #     - PORT=3001
+  #   depends_on:
+  #     - mongo-products
+  #     - redis
+
+  # mongo-products:
+  #   image: mongo
+  #   ports:
+  #     - "3001:3001"
+
+
+  productService:
+    build: ./productService
     ports:
       - "3001:3001"
+    environment:
+      - MONGO_URI=mongodb+srv://mitch1:portfoliodbpassword@andy.kf1hg09.mongodb.net/product_serviceDb
+      - REDIS_URL=redis://redis:6379
+      - PORT=3001
     depends_on:
       - mongo-products
+      - redis
 
   mongo-products:
     image: mongo
-
-  order-service:
-    build: ./order-service
     ports:
-      - "3002:3002"
-    depends_on:
-      - mongo-orders
-
-  mongo-orders:
-    image: mongo
-
-  payment-service:
-    build: ./payment-service
-    ports: 
-      - "3003:3003"
-    depends_on:
-      -mongo-payment
-  
-  mongo-payment:
-    image: mongo
-  
+      - "27017:27017"
 
   redis:
     image: redis
     ports:
       - "6379:6379"
+
+  # payment-service:
+  #   build: ./payment-service
+  #   ports: 
+  #     - "3003:3003"
+  #   depends_on:
+  #     -mongo-payment
+  
+  # mongo-payment:
+  #   image: mongo
+  
+
+  # redis:
+  #   image: redis
+  #   ports:
+  #     - "6379:6379"
 
   api-gateway:
     image: nginx:latest
@@ -59,7 +98,8 @@ services:
     ports:
       - "80:80"
     depends_on:
-      - user-service
-      - product-service
-      - order-service
+      - productService
+      # - userService
+      # - orderService
+      # -paymentService
 
